# opengl_game

./: .gitignore  Cargo.toml  README.md  todo.md
assets/: blue_shader.frag  orange_shader.frag  texture_shader.vert
assets/maps/sad/: sad_melodica.txt
assets/maps/upbeat/: upbeat.txt
assets/models/cube/: cube.mtl
assets/models/plane/: plane.mtl
assets/shaders/: blue_shader.vert  light.vert  light_shader.frag  light_shader.vert  model.vert  orange_shader.vert  outline.frag  outline.vert  plane.vert  progress_bar.frag  progress_bar.vert  texture.frag  texture_shader.frag  texture_shader.vert
src/: camera.rs  config.rs  controller.rs  file_utils.rs  light.rs  main.rs  model.rs  physics.rs  shader.rs  shape.rs  shapes.rs  state.rs
src/audio/: audio_file.rs  mod.rs
src/render/: box_renderer.rs  cube_renderer.rs  mod.rs  model_loader.rs  model_renderer.rs  outline_renderer.rs  plane_renderer.rs  point_light_renderer.rs  progress_renderer.rs  spot_light_renderer.rs
src/resource/: audio.rs  font.rs  manager.rs  map.rs  mod.rs  model.rs
src/state/: game.rs  map.rs  mod.rs  scene.rs
src/state/scenes/: level.rs  loading.rs  menu.rs  mod.rs
