[package]
name = "opengl_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.48.0"
image = "0.24.5"
na = "0.32.2"
nalgebra = "0.31.4"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
